2001-03-08  Simon Perkins  <simes@genie.lanl.gov>

	* Added support for reading and	writing metadata to FITS files.
	Upon opening a FITS file, all non trivial headers are read from
	the file and stored in the metadata store. Upon closing the FITS
	file, any metadata associated with a name that is 8 characters or
	less long, is written to the FITS file. The driver attempts to
	guess the type of the metadata (double, long, logical or string)
	and calls the appropriate fits update functions.

2001-03-06  Simon Perkins  <simes@genie.lanl.gov>

	* frmts/fits/fitsdataset.cpp: Fixed bug in situation where we
	attempt to read from a newly created band.

2001-03-05  Simon Perkins  <simes@genie.lanl.gov>

	* Added FITS format support and documentation.

2001-03-01  Frank Warmerdam  <warmerdam@pobox.com>

	* Added --ogr-enabled, --formats and --version options for gdal-config.
	Also, added VERSION file in gdal root directory, and update of it
	by mkgdaldist.sh.

2001-02-28  Frank Warmerdam  <warmerdam@pobox.com>

	* Fixed up handling of pyexecdir.

2001-02-24  Frank Warmerdam  <warmerdam@pobox.com>

	* Added Envisat format support.

2001-02-19  Frank Warmerdam  <warmerdam@pobox.com>

	* aclocal.m4: fixed mixup between pyexecdir and pythonexecdir, thanks
	to Bernhard Reiter.

	* apps/gdal_translate.c: fixed georeferenced calculation for
	-srcwin subwindowing.

2001-02-15  Frank Warmerdam  <warmerdam@pobox.com>

	* port/cpl_error.cpp: Fixed initialization of fpLog.  Log was
	being reset to stderr on second call to CPLDefaultErrorHandler.

2001-02-08  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/gif/{e,d}gif_lib.c: Fixed to use binary mode if O_BINARY
	is defined rather than based on __MSDOS__.

2001-02-06  Frank Warmerdam  <warmerdam@pobox.com>

	* Export various OGR classes, and entry points from DLL.

	* Fixed numpydataset.cpp to use sscanf() to parse pointer.

2001-02-05  Frank Warmerdam  <warmerdam@pobox.com>
